--- a/app/src/main/res/layout/activity_lista_categoria.xml
+++ b/app/src/main/res/layout/activity_lista_categoria.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.Objetivo.ListObjetivoActivity"
-    android:orientation="vertical">
+    tools:context=".view.Categoria.ListaCategoriaActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -15,18 +14,20 @@
         android:paddingBottom="10sp"
         android:gravity="center"
         android:textSize="24sp"
-        android:text=""
+        android:text="Lista Categoria"
         android:textStyle="bold"
         android:textColor="@color/Primario"
         />
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listaObjetivos"
+        android:id="@+id/listaCategorias"
+        android:paddingTop="10dp"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnAgregarObjetivo"
+        android:id="@+id/btnAgregarCategoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -35,8 +36,7 @@
         android:layout_alignParentRight="true"
         android:src="@drawable/ic_add_white"
         android:backgroundTint="@color/Primario"
-        android:contentDescription="@string/str_btnAgregarObjetivo"
+        android:contentDescription="Agregar categoria"
         />
-
 
 </RelativeLayout>
