--- a/app/src/main/res/layout/activity_list_objetivo.xml
+++ b/app/src/main/res/layout/activity_list_objetivo.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".view.Objetivo.ListObjetivoActivity"
     android:orientation="vertical">
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,14 +14,16 @@
         android:paddingBottom="10sp"
         android:gravity="center"
         android:textSize="24sp"
-        android:text=""
-        android:textStyle="bold"
-        android:textColor="@color/Primario"
+        android:text="Lista Objetivo"
+        android:textStyle=""
+        android:textColor="@color/white"
+        android:background="@color/Primario"
         />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listaObjetivos"
+        android:paddingTop="60dp"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
