--- a/app/src/main/res/layout/activity_lista_ejercicio.xml
+++ b/app/src/main/res/layout/activity_lista_ejercicio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,20 +7,39 @@
     android:layout_height="match_parent"
     tools:context=".view.Ejercicio.ListaEjercicioActivity"
     android:orientation="vertical"
-    android:padding="10dp">
+    >
     <!-- Título de la pantalla -->
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lista de Ejercicios"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp" />
+        android:paddingTop="10sp"
+        android:paddingBottom="10sp"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:text="Lista Ejercicio"
+        android:textStyle=""
+        android:textColor="@color/white"
+        android:background="@color/Primario"
+        />
 
     <!-- RecyclerView para mostrar la lista de ejercicios -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerEjercicios"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingTop="60dp"/>
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnAgregarEjercicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="8dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_add_white"
+        android:backgroundTint="@color/Primario"
+        android:contentDescription="AgregarEjercicio"
+        />
+</RelativeLayout>
